to do app assignment

--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
   },
   "author": "Rahul Gund",
   "license": "ISC",
-  "bugs": {
-  },
-  
+  "bugs": {},
   "devDependencies": {
     "@babel/core": "^7.24.4",
     "@babel/preset-env": "^7.24.4",
